[tool.poetry]
name = "RLTest"
version = "0.7.2"
description="Redis Modules Test Framework, allow to run tests on redis and modules on a variety of environments"
authors = ["Redis, Inc. <oss@redis.com>"]
license = "BSD-3-Clause"
readme = "README.md"

packages = [
    { include = 'RLTest' },
]

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'
]

[tool.poetry.dependencies]
python = ">= 3.7.0"
distro = "^1.5.0"
redis = "^5.0.0rc2"
psutil = "^5.9.5"
pytest-cov = "^4.1.0"
pytest = "^7.4"

[tool.poetry.urls]
repository = "https://github.com/RedisLabsModules/RLTest"

[tool.poetry.scripts]
RLTest = 'RLTest.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
